src/test/ui/parser/doc-before-attr.stderr
error: expected item after attributes
  --> $DIR/doc-before-attr.rs:4:16
   |
LL | #[derive(Debug)]
   |                ^

error: aborting due to previous error

